--- a/src/index.html
+++ b/src/index.html
@@ -27,5 +27,8 @@
         <i class="fa-regular fa-chart-bar"></i>
       </div>
     </nav>
+    <section class="SECTION1 px-[20px] lg:px-[100px] py-[10px] h-[40vh] lg:h-[100vh] flex justify-between items-center">
+        <h1 class="w-[80%] lg:w-[60%] text-[#292E3D] text-[30px] font-bold lg:text-[70px]">Building things is our mission.</h1>
+      </section>
 </body>
 </html>
